# open-belex

./: .gitignore  .project-root  README.md  bitbucket-pipelines.yml  environment.yml  setup.cfg  setup.py
docs/: bellex_tcam.apl
docs/belex/: glass.md  temporaries.md  types.md
docs/bleir/: index.md  listener.md  transformer.md  visitor.md
docs/sphinx/source/: conf.py  index.rst
src/open_belex/: apl.py  apl_optimizations.py  compiler.py  decorators.py  directed_graph.py  expressions.py  intermediate_representation.py  laning.py  literal.py  register_allocation.py  renderable.py
src/open_belex/bleir/: adapters.py  aggregators.py  allocators.py  analyzers.py  boilerplate.py  builders.py  commands.py  generators.py  inspectors.py  interpreters.py  optimizers.py  pretty_printer.py  rewriters.py  semantic_validators.py  syntactic_validators.py  template_accessors.py  template_extensions.py  types.py  virtual_machines.py  walkables.py
src/open_belex/common/: constants.py  gvml.py  half_bank.py  mask.py  (+7 more)
templates/apl/: apl_header.jinja  apl_source.jinja  belex_constants.jinja  belex_examples.jinja  belex_utils_header.jinja  belex_utils_source.jinja  gvml_app_intern_header.jinja  gvml_app_module.jinja  listener.jinja  test_gvml_app.jinja  test_gvml_app_header.jinja  test_gvml_app_main.jinja  transformer.jinja  visitor.jinja
templates/baryon/: baryon_header.jinja  baryon_source.jinja
templates/markdown/: bleir_index.jinja  bleir_listener.jinja  bleir_transformer.jinja  bleir_visitor.jinja
templates/meson/: belex_examples_meson_build.jinja  meson_build.jinja
(+120 files in other folders)
