[metadata]
name = open-belex
version = 1.0.0
author =
    Brian Beckman
    Dylon Edwards
author_email =
    bbeckman@gsitechnology.com
    dthomas@gsitechnology.com
description = APL compiler suite for the APU (Open Source)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bitbucket.org/gsitech/open-belex
project_urls =
    Bug Tracker = https://bitbucket.org/gsitech/open-belex/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    Jinja2==3.1.2
    PyYAML==6.0
    cerberus==1.3.4
    click==8.1.6
    numpy==1.25.1
    reactivex==4.0.4
scripts =
    bin/build-docs.sh

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    belex-aot = open_belex.scripts.belex_aot:main
    belex-pp = open_belex.scripts.belex_pp:main
    generate-belex-docs = open_belex.scripts.generate_belex_docs:main
